Evento Castrol Day - Nova Peças

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,9 @@ body {
 	video {
     object-fit: contain;
 	}
+	iframe.vss{
+        width: 90%;
+    }
 	.imgSede{
 	max-width: 60%;
 	position: fixed;	
