--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -5,7 +5,14 @@
     lg (para desktops maiores)
 ==============================================================*/
 @media (min-width: 1501px){
-   .subFooter3 a{
+   .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 20%;
+    margin: auto;
+    margin-top: 50px;   
+    }
+    .subFooter3 a{
         font-size: 12px;
     }
     #cat a img {
@@ -121,7 +128,15 @@
     }
 }
 @media (min-width: 1251px) and (max-width: 1500px) {
-    #portfolio .row {
+   
+   .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 20%;
+    margin: auto;
+    margin-top: 50px;   
+    }
+     #portfolio .row {
     margin-left: -10px;
     margin-right: -10px;
     }
@@ -180,7 +195,14 @@
     }
 }
 @media (min-width: 1025px) and (max-width: 1250px) {
-    #portfolio .row {
+   .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 20%;
+    margin: auto;
+    margin-top: 50px;   
+    }
+     #portfolio .row {
     margin-left: -10px;
     margin-right: -10px;
     }
@@ -298,7 +320,14 @@
 }
 
 @media (min-width: 980px) and (max-width: 1024px) {
-    #portfolio .row {
+   .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 20%;
+    margin: auto;
+    margin-top: 50px;   
+    }
+     #portfolio .row {
     margin-left: -10px;
     margin-right: -10px;
     }
@@ -418,7 +447,15 @@
 ==============================================================*/
 
 @media (min-width: 768px) and (max-width: 979px) {    #passHover 
-   .topnav > li > a{
+   
+   .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 20%;
+    margin: auto;
+    margin-top: 50px;   
+    }
+    .topnav > li > a{
     margin-right: 10px !important;
     font-size: 18px !important;
     }
@@ -806,6 +843,13 @@
     }
 }
 @media only screen and (min-width: 320px) and (max-width: 479px) {
+    .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 0%;
+    margin: auto;
+    margin-top: 50px;   
+    }
     .topnav > li > a{
         font-size: 15px;
     }
@@ -1038,6 +1082,13 @@
 }
 
 @media only screen and (min-width: 200px) and (max-width: 319px) {#passHover 
+    .imgStart{
+    max-width: 90%;
+    position: fixed;    
+    left: 0%;
+    margin: auto;
+    margin-top: 50px;   
+    }
     .produto-filter > li a{
         font-size: 10px !important;
     }
